--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "del-canvas"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "drawing primitives (e.g., triangles and lines) to bitmap images and gif animation."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
