--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ num-traits = "0.2.19"
 png = "0.17.13"
 gif = "0.13.1"
 image = "0.25.1"
-nalgebra = "0.32.5"
+nalgebra = "0.33.0"
 rand = "0.8.5"
 
 #del-msh = "0.1.28"
 #del-geo = "0.1.22"
-del-msh = { path = "../del-msh"}
+del-msh-core = { path = "../del-msh/del-msh-core"}
 del-geo = { path = "../del-geo"}
