--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ rand = "0.8.5"
 
 #del-msh = "0.1.28"
 #del-geo = "0.1.22"
-del-msh-core = { path = "../del-msh/del-msh-core"}
-del-geo-core = { path = "../del-geo/del-geo-core"}
-del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra"}
+#del-msh-core = { path = "../del-msh/del-msh-core"}
+#del-geo-core = { path = "../del-geo/del-geo-core"}
+#del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra"}
+#
+del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
+del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
+del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
