--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ image = "0.25.1"
 nalgebra = "0.33.0"
 rand = "0.8.5"
 rayon = "1.10.0"
+anyhow = "1.0.86"
+arrayref = "0.3.8"
+rand_chacha = "0.3.1"
 
 del-msh-core = { path = "../del-msh/del-msh-core"}
 del-geo-core = { path = "../del-geo/del-geo-core"}
