--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rand = "0.8.5"
 rayon = "1.10.0"
 anyhow = "1.0.86"
 arrayref = "0.3.8"
+itertools = "0.13.0"
 rand_chacha = "0.3.1"
 
 del-msh-core = { path = "../del-msh/del-msh-core"}
