--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
-members = ["del-canvas-core", "del-canvas-cuda"]
+members = ["del-canvas-core", "del-canvas-glutin"]
 resolver = "2"
+exclude = ["del-canvas-cuda"]
 
 [workspace.package]
 version = "0.1.1"
@@ -22,6 +23,8 @@ anyhow = "1.0.86"
 arrayref = "0.3.8"
 itertools = "0.13.0"
 rand_chacha = "0.3.1"
+
+
 
 del-msh-core = { path = "../del-msh/del-msh-core"}
 del-geo-core = { path = "../del-geo/del-geo-core"}
