--- a/del-canvas-cuda/Cargo.toml
+++ b/del-canvas-cuda/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "del-canvas-cuda"
-version.workspace = true
-edition.workspace = true
-license.workspace = true
-description.workspace = true
+version = "0.1.0"
+edition = "2021"
+license = "MIT"
+description = "hogehoge"
 
 [dependencies]
 num-traits = "0.2.19"
+anyhow = "1.0.86"
+cudarc = { version = "=0.11.8", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
+del-msh-core = { path = "../../del-msh/del-msh-core"}
+del-geo-core = { path = "../../del-geo/del-geo-core"}
+del-canvas-core = { path = "../del-canvas-core"}
 
 [build-dependencies]
-cc = "1.1.8"
+bindgen_cuda = "0.1.5"
