--- a/del-canvas-cuda/Cargo.toml
+++ b/del-canvas-cuda/Cargo.toml
@@ -9,8 +9,10 @@ description = "hogehoge"
 num-traits = "0.2.19"
 anyhow = "1.0.86"
 cudarc = { version = "=0.11.8", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
-del-msh-core = { path = "../../del-msh/del-msh-core"}
-del-geo-core = { path = "../../del-geo/del-geo-core"}
+# workspace
+del-msh-core = { workspace = true }
+del-geo-core = { workspace = true }
+# local
 del-canvas-core = { path = "../del-canvas-core"}
 
 [build-dependencies]
