--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,9 @@ itertools = "0.13.0"
 rand_chacha = "0.3.1"
 
 
-
-del-msh-core = { path = "../del-msh/del-msh-core"}
-del-geo-core = { path = "../del-geo/del-geo-core"}
-del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra"}
+del-geo-core = "0.1.29" #{ path = "../del-geo/del-geo-core"}
+del-geo-nalgebra = "0.1.29" # { path = "../del-geo/del-geo-nalgebra"}
+del-msh-core = "0.1.34" #{ path = "../del-msh/del-msh-core"}
 #
 # del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
 # del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
