--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/target
 .DS_Store
 Cargo.lock
 .idea
@@ -6,3 +5,4 @@ external/glfwbuild
 external/glfwlib
 del-canvas-cuda/target
 cpp-glfw/build
+target
