--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "del-canvas-glutin"
+name = "demos"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -12,12 +12,12 @@ winit = "0.30.5"
 raw-window-handle = "0.6.2"
 image = "0.25.2"
 #
-del-gl-core = {path = "../../del-gl/del-gl-core"}
-del-winit-glutin = {path = "../../del-gl/del-winit-glutin"}
 # workspace
 del-msh-core = { workspace = true }
 del-geo-core = { workspace = true }
 # local
+del-gl-core = {path = "../../del-gl/del-gl-core"}
+del-winit-glutin = {path = "../../del-gl/del-winit-glutin"}
 del-canvas-core = { path = "../del-canvas-core" }
 
 [build-dependencies]
