--- a/del-canvas-core/Cargo.toml
+++ b/del-canvas-core/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = {workspace = true}
 arrayref = {workspace = true}
 itertools = {workspace = true}
 rand_chacha = {workspace = true}
+slice-of-array = {workspace = true}
 
 del-msh-core = { workspace = true }
 del-geo-core = { workspace = true }
