--- a/del-canvas-kernel-cuda/Cargo.toml
+++ b/del-canvas-kernel-cuda/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "del-canvas-cuda"
+name = "del-canvas-kernel-cuda"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
@@ -8,6 +8,7 @@ description = "hogehoge"
 [dependencies]
 num-traits = "0.2.19"
 anyhow = "1.0.86"
+slice-of-array = "0.3.2"
 cudarc = { version = "=0.11.8", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
 # workspace
 del-msh-core = { path = "../../del-msh/del-msh-core" }
