--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ Cargo.lock
 .idea
 external/glfwbuild
 external/glfwlib
-del-canvas-cuda/target
+del-canvas-kernel-cuda/target
 cpp-glfw/build
 target
