--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
-members = ["del-canvas-core", "demos"]
+members = ["del-canvas-cpu", "del-canvas-cpu-gl"]
 resolver = "2"
-exclude = ["del-canvas-kernel-cuda", "demos-cuda"]
+exclude = ["del-canvas-cuda-kernel", "del-canvas-cuda"]
 
 [workspace.package]
 version = "0.1.1"
@@ -25,7 +25,7 @@ itertools = "0.13.0"
 rand_chacha = "0.3.1"
 slice-of-array = "0.3.2"
 # internal
-del-canvas-core = { path = "del-canvas-core" }
+del-canvas-core = { path = "del-canvas-cpu" }
 
  del-geo-core = { path = "../del-geo/del-geo-core"} # "0.1.29" #
  del-geo-nalgebra ={ path = "../del-geo/del-geo-nalgebra"} #  "0.1.29" #
