--- a/del-canvas-cuda/Cargo.toml
+++ b/del-canvas-cuda/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "demos-cuda"
+name = "del-canvas-cuda"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
@@ -24,8 +24,9 @@ del-msh-core = { path = "../../del-msh/del-msh-core" }
 del-geo-core = { path = "../../del-geo/del-geo-core" }
 del-gl-core = { path = "../../del-gl/del-gl-core"}
 del-winit-glutin = {path = "../../del-gl/del-winit-glutin"}
-del-canvas-core = { path = "../del-canvas-cpu" }
-del-canvas-kernel-cuda = { path = "../del-canvas-cuda-kernel" }
+# internal
+del-canvas-cpu = { path = "../del-canvas-cpu" }
+del-canvas-cuda-kernel = { path = "../del-canvas-cuda-kernel" }
 
 [build-dependencies]
 gl_generator = "0.14"
