--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,16 +25,16 @@ itertools = "0.13.0"
 rand_chacha = "0.3.1"
 slice-of-array = "0.3.2"
 # internal
-del-canvas-core = { path = "del-canvas-cpu" }
-
- del-geo-core = { path = "../del-geo/del-geo-core"} # "0.1.29" #
- del-geo-nalgebra ={ path = "../del-geo/del-geo-nalgebra"} #  "0.1.29" #
- del-msh-core = { path = "../del-msh/del-msh-core"} # "0.1.34" #
- del-gl-core = {path = "../del-gl/del-gl-core" }
- del-winit-glutin = {path = "../del-gl/del-winit-glutin"}
+del-canvas-cpu = { path = "del-canvas-cpu" }
 #
-#del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
-#del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
-#del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
-#del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
-#del-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
+# del-geo-core = { path = "../del-geo/del-geo-core"} # "0.1.29" #
+# del-geo-nalgebra ={ path = "../del-geo/del-geo-nalgebra"} #  "0.1.29" #
+# del-msh-core = { path = "../del-msh/del-msh-core"} # "0.1.34" #
+# del-gl-core = {path = "../del-gl/del-gl-core" }
+# del-winit-glutin = {path = "../del-gl/del-winit-glutin"}
+#
+del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
+del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
+del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
+del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
+del-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
