--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = ["del-canvas-cpu", "del-canvas-cpu-gl"]
 resolver = "2"
-exclude = ["del-canvas-cuda-kernel", "del-canvas-cuda"]
+exclude = ["del-canvas-cuda-kernel", "del-canvas-cuda", "del-canvas-cuda-gl"]
 
 [workspace.package]
 version = "0.1.1"
@@ -33,8 +33,8 @@ del-canvas-cpu = { path = "del-canvas-cpu" }
 # del-gl-core = {path = "../del-gl/del-gl-core" }
 # del-winit-glutin = {path = "../del-gl/del-winit-glutin"}
 #
-del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
-del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
+del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git", version = "0.1.30"}
+del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git", version = "0.1.30"}
 del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
 del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
 del-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
