interactive cuda gaussian splatting

--- a/del-canvas-cuda-gl/Cargo.toml
+++ b/del-canvas-cuda-gl/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "del-canvas-cuda"
+name = "del-canvas-cuda-gl"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
@@ -27,6 +27,7 @@ del-winit-glutin = {path = "../../del-gl/del-winit-glutin"}
 # internal
 del-canvas-cpu = { path = "../del-canvas-cpu" }
 del-canvas-cuda-kernel = { path = "../del-canvas-cuda-kernel" }
+del-canvas-cuda = { path = "../del-canvas-cuda" }
 
 [build-dependencies]
 gl_generator = "0.14"
