--- a/del-canvas-cuda-gl/Cargo.toml
+++ b/del-canvas-cuda-gl/Cargo.toml
@@ -23,7 +23,7 @@ cudarc = { version = "=0.11.8", features = ["std", "cublas", "cublaslt", "curand
 del-msh-core = { path = "../../del-msh/del-msh-core" }
 del-geo-core = { path = "../../del-geo/del-geo-core" }
 del-gl-core = { path = "../../del-gl/del-gl-core"}
-del-winit-glutin = {path = "../../del-gl/del-winit-glutin"}
+del-gl-winit-glutin = {path = "../../del-gl/del-gl-winit-glutin"}
 # internal
 del-canvas-cpu = { path = "../del-canvas-cpu" }
 del-canvas-cuda-kernel = { path = "../del-canvas-cuda-kernel" }
