--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,10 @@ slice-of-array = "0.3.2"
 # internal
 del-canvas-cpu = { path = "del-canvas-cpu" }
 #
-# del-geo-core = { path = "../del-geo/del-geo-core"} # "0.1.29" #
-# del-geo-nalgebra ={ path = "../del-geo/del-geo-nalgebra"} #  "0.1.29" #elease
-# del-msh-core = { path = "../del-msh/del-msh-core"} # "0.1.34"
-# del-msh-nalgebra = { path = "../del-msh/del-msh-nalgebra"} # "0.1.34"
+# del-geo-core = { path = "../del-geo/del-geo-core"}
+# del-geo-nalgebra ={ path = "../del-geo/del-geo-nalgebra"}
+# del-msh-core = { path = "../del-msh/del-msh-core"}
+# del-msh-nalgebra = { path = "../del-msh/del-msh-nalgebra"}
 # del-gl-core = {path = "../del-gl/del-gl-core" }
 # del-gl-winit-glutin = {path = "../del-gl/del-gl-winit-glutin"}
 #
