--- a/del-canvas-cuda/Cargo.toml
+++ b/del-canvas-cuda/Cargo.toml
@@ -19,6 +19,7 @@ del-geo-core = { path = "../../del-geo/del-geo-core" }
 del-gl-core = { path = "../../del-gl/del-gl-core"}
 # internal
 del-canvas-cpu = { path = "../del-canvas-cpu" }
+del-canvas-image = { path = "../del-canvas-image" }
 del-canvas-cuda-kernel = { path = "../del-canvas-cuda-kernel" }
 
 [build-dependencies]
