--- a/del-canvas-image/Cargo.toml
+++ b/del-canvas-image/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "del-canvas-cpu"
+name = "del-canvas-image"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -22,8 +22,11 @@ rand_chacha = {workspace = true}
 slice-of-array = {workspace = true}
 byteorder = {workspace = true}
 
-del-msh-core.workspace = true
-del-msh-nalgebra.workspace = true
-del-geo-core.workspace = true
-del-geo-nalgebra.workspace = true
-del-canvas-image.workspace = true
+# del-msh-core = { workspace = true }
+# del-msh-nalgebra = { workspace = true }
+# del-geo-core = { workspace = true }
+# del-geo-nalgebra = { workspace = true }
+#
+# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
+# del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
+# del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
