--- a/del-canvas-cpu/Cargo.toml
+++ b/del-canvas-cpu/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "del-canvas-cpu"
+description = "hogehoge"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
-description.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -21,7 +21,6 @@ itertools = {workspace = true}
 rand_chacha = {workspace = true}
 slice-of-array = {workspace = true}
 byteorder = {workspace = true}
-
 del-msh-core.workspace = true
 del-msh-nalgebra.workspace = true
 del-geo-core.workspace = true
