--- a/del-canvas-splat-cudarc/Cargo.toml
+++ b/del-canvas-splat-cudarc/Cargo.toml
@@ -5,19 +5,23 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+cuda = ["dep:cudarc", "dep:del-canvas-splat-cudarc-kernel", "dep:del-cudarc-util"]
+
 [dependencies]
 anyhow.workspace = true
 num-traits.workspace = true
 slice-of-array.workspace = true
 itertools.workspace = true
-cudarc.workspace = true
 del-msh-core.workspace = true
 del-geo-core.workspace = true
 del-gl-core.workspace = true
 del-canvas-cpu.workspace = true
 del-canvas-image.workspace = true
-del-cudarc-util.workspace = true
-del-canvas-splat-cudarc-kernel.workspace = true
+
+cudarc = { workspace = true, optional = true }
+del-cudarc-util = { workspace = true, optional = true }
+del-canvas-splat-cudarc-kernel = {workspace = true, optional = true }
 # kernel-util.workspace = true
 
 # [build-dependencies]
