--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 members = [
     "del-canvas-cpu",
     "del-canvas-image",
+    "del-canvas-raycast-cudarc",
     "del-canvas-splat-cudarc",
     "del-canvas-raycast",
     "demos-cudarc-gl",
     "demos-gl"
 ]
-exclude = ["del-canvas-splat-cudarc-kernel"]
+exclude = ["del-canvas-splat-cudarc-kernel", "del-canvas-raycast-cudarc-kernel"]
 resolver = "2"
 
 [workspace.package]
@@ -52,6 +53,8 @@ del-canvas-image = {path = "del-canvas-image"}
 del-canvas-splat-cudarc = {path = "del-canvas-splat-cudarc"}
 del-canvas-splat-cudarc-kernel = {path = "del-canvas-splat-cudarc-kernel"}
 del-canvas-raycast = {path="del-canvas-raycast"}
+del-canvas-raycast-cudarc = {path = "del-canvas-raycast-cudarc"}
+del-canvas-raycast-cudarc-kernel = {path = "del-canvas-raycast-cudarc-kernel"}
 
 # for develop
 # del-geo-core = { path = "../del-geo/del-geo-core"}
