--- a/demos-cudarc-gl/Cargo.toml
+++ b/demos-cudarc-gl/Cargo.toml
@@ -10,7 +10,7 @@ cuda = [
     "dep:cudarc",
     "dep:del-msh-cudarc",
     "dep:del-canvas-splat-cudarc",
-    "dep:del-canvas-raycast-cudarc"]
+    "dep:del-raycast-cudarc"]
 
 
 [dependencies]
@@ -29,12 +29,12 @@ del-gl-core.workspace = true
 del-gl-winit-glutin.workspace = true
 del-canvas-image.workspace = true
 del-canvas-cpu.workspace = true
-del-canvas-raycast.workspace = true
+del-raycast.workspace = true
 
 cudarc = { workspace = true, optional = true }
 del-msh-cudarc = { workspace = true, optional = true }
 del-canvas-splat-cudarc = { workspace = true, optional = true }
-del-canvas-raycast-cudarc = { workspace = true, optional = true }
+del-raycast-cudarc = { workspace = true, optional = true }
 
 [build-dependencies]
 gl_generator.workspace = true
