--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,10 @@
 members = [
     "del-canvas-cpu",
     "del-canvas-image",
-    "del-raycast",
-    "del-raycast-cudarc",
     "del-splat-cudarc",
-    "demos-cudarc-gl",
-    "demos-gl"
-]
+    "examples-cudarc-gl"]
 exclude = [
-    "del-splat-cudarc-kernel",
-    "del-raycast-cudarc-kernel"]
+    "del-splat-cudarc-kernel"]
 resolver = "2"
 
 [workspace.package]
@@ -55,9 +50,6 @@ del-canvas-cpu = { path = "del-canvas-cpu" }
 del-canvas-image = {path = "del-canvas-image"}
 del-splat-cudarc = {path = "del-splat-cudarc"}
 del-splat-cudarc-kernel = {path = "del-splat-cudarc-kernel"}
-del-raycast = {path="del-raycast"}
-del-raycast-cudarc = {path = "del-raycast-cudarc"}
-del-raycast-cudarc-kernel = {path = "del-raycast-cudarc-kernel"}
 
 # for develop
 # del-geo-core = { path = "../del-geo/del-geo-core"}
@@ -82,6 +74,7 @@ del-msh-cudarc-kernel = {git = "https://github.com/nobuyuki83/del-msh.git"}
 del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
 del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
 del-cudarc = { git="https://github.com/nobuyuki83/del-cudarc.git"}
+del-raycast-cudarc = { git="https://github.com/nobuyuki83/del-raycast.git"}
 pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }
 
 # for deploy
