--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "del-canvas"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "MIT"
 description = "drawing primitives (e.g., triangles and lines) to bitmap images and gif animation."
@@ -9,21 +9,19 @@ description = "drawing primitives (e.g., triangles and lines) to bitmap images a
 
 [dependencies]
 num-traits = "0.2.19"
-image = "0.25.5"
+image = { version = "0.25.6", features = ["hdr"], default-features = false}
 png = "0.17.16"
-anyhow = "1.0.95"
+anyhow = "1.0.97"
 gif = "0.13.1"
 slice-of-array = "0.3.2"
+arrayref = "0.3.9"
 
 # for develop
 # del-geo-core = { path = "../del-geo/del-geo-core"}
-# del-msh-core = { path = "../del-msh/del-msh-core"}
 
 # for github push
-del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
-del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
+# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
 
 # for deploy
-# del-geo-core = "0.1.33"
-# del-msh-core = "0.1.37"
+del-geo-core = "0.1.34"
 
